# pentawall

./: LEDWall.hs  LoadImage.hs  README  README.mkd  noise.hs  piczoom.hs  radar.hs  rain.hs  stars.hs  text.hs  tunnel.hs
clients/haskell/: .gitignore  noise.hs  radar.hs  rain.hs
clients/idleloop/: idleloop.pl  ledwall.pm  ledwall_tcp.pm
clients/libpentawall/: AUTHORS  Makefile.am  README  configure.ac
clients/libpentawall/src/: Makefile.am  TODO  libpentawall-1.0.h  libpentawall-1.0.pc.in  pentawall.c
eagle/: 5led.brd  5led.sch  README  ledmaster.brd  ledmaster.sch
ledmoduleAtmega/: Makefile  README  TWI_Slave.c  TWI_Slave.h  eeprom.c  eeprom.h  leds.c  leds.h  main.c  spi.c  spi.h  timer.c  timer.h
masterModule/: Makefile  README  TWI_Master.c  TWI_Master.h  main.c  usart.c  usart.h
wallServer/: README  wallServer.Perl
