

lib_LTLIBRARIES = libpentawall-1.0.la
libpentawall_1_0_la_SOURCES = pentawall.c
include_HEADERS = libpentawall-1.0.h
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libpentawall-1.0.pc


noinst_PROGRAMS = pentawalltest
pentawalltest_SOURCES = pentawall.c
pentawalltest_CFLAGS = -DTEST_FREESTANDING

EXTRA_DIST= #nothing yet but media etc

